k8s/prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: prod
  name: user-service
spec:
  type: ClusterIP
  selector:
    app: user-service
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
